add cancel button to category creation form for improved user navigation

--- a/WebApplication1/Areas/Admin/Views/Category/Create.cshtml
+++ b/WebApplication1/Areas/Admin/Views/Category/Create.cshtml
@@ -24,6 +24,7 @@
                 </div>
 
                 <button type="submit" class="btn btn-primary">Create Category</button>
+                <a href="/Admin/Category" class="btn btn-secondary">Cancel</a>
             </form>
         </div>
     </div>
