--- a/WebApplication1/Views/Shared/_FeaturedPostCard.cshtml
+++ b/WebApplication1/Views/Shared/_FeaturedPostCard.cshtml
@@ -2,8 +2,8 @@
 @model PostCardViewModel
 
 <article class="featured-post-card">
-    <a asp-controller="Blog" asp-action="Post" asp-route-id="@Model.Id" asp-route-slug="@Model.Slug"
-        class="featured-post-link">
+    <a asp-controller="Blog" asp-action="Post" asp-route-slug="@Model.Slug"
+       class="featured-post-link">
         @if (!string.IsNullOrEmpty(Model.FeaturedImageUrl))
         {
             <div class="featured-image-container">
