--- a/WebApplication1/Views/Shared/_PostCard.cshtml
+++ b/WebApplication1/Views/Shared/_PostCard.cshtml
@@ -2,8 +2,8 @@
 @model PostCardViewModel
 
 <article class="mat-post-card">
-    <a asp-controller="Blog" asp-action="Post" asp-route-id="@Model.Id" asp-route-slug="@Model.Slug"
-        class="post-card-link">
+    <a asp-controller="Blog" asp-action="Post" asp-route-slug="@Model.Slug"
+       class="post-card-link">
         @if (!string.IsNullOrEmpty(Model.FeaturedImageUrl))
         {
             <div class="post-image-container">
