--- a/WebApplication1/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/WebApplication1/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="~/css/_variables.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/admin.css" asp-append-version="true" />
+    <link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet" />
 
     <script>
         try {
@@ -145,6 +146,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="https://unpkg.com/filepond/dist/filepond.js"></script>
     <!-- DataTables JS -->
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
