add featured image display in Post view and include post-edit.js script in Edit view

--- a/WebApplication1/Areas/Admin/Views/Post/Edit.cshtml
+++ b/WebApplication1/Areas/Admin/Views/Post/Edit.cshtml
@@ -102,4 +102,5 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script src="~/js/post-edit.js" asp-append-version="true"></script>
 }
